--- a/LightCubeApp/package.json
+++ b/LightCubeApp/package.json
@@ -7,13 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "base64-js": "^1.3.0",
+    "buffer": "^5.2.1",
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-native-ble-plx": "^1.0.3",
+    "react-native-color-picker": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/runtime": "^7.4.4",
+    "@types/base64-js": "^1.2.5",
     "@types/jest": "^24.0.12",
+    "@types/js-base64": "^2.3.1",
     "@types/react": "^16.8.16",
     "@types/react-native": "^0.57.51",
     "@types/react-test-renderer": "^16.8.1",
